--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
@@ -18,14 +19,17 @@
     "agora-stream-player": "^1.2.0",
     "agoran-awe": "^1.1.2",
     "axios-mock-adapter": "^1.19.0",
+    "bootstrap": "^4.5.3",
     "dayjs": "^1.9.7",
     "polished": "^4.0.5",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-dropdown-select": "^4.7.3",
     "react-intl": "^5.10.9",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
+    "react-use": "^15.3.4",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.1.3",
@@ -33,6 +37,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "npm run build && gh-pages -b gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -57,6 +62,8 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
+    "gh-pages": "^3.1.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.2.1"
   }
 }
