--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-redux": "^7.1.14",
     "@types/styled-components": "^5.1.7",
     "agora-rtc-sdk": "^3.3.1",
     "agora-stream-player": "^1.2.0",
@@ -27,9 +28,12 @@
     "react-dom": "^17.0.1",
     "react-dropdown-select": "^4.7.3",
     "react-intl": "^5.10.9",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
     "react-use": "^15.3.4",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.1.3",
